PYIC-3796: Fix for e2e tests